--- a/addtocart.css
+++ b/addtocart.css
@@ -14,7 +14,7 @@ body{
 .header{
     height: 80px;
     width: 70%;
-    background-color: #f7f4e4;
+    background-color: #ececec;
     border-radius: 3px;
     margin: 30px 0px;
     display: flex;
@@ -25,11 +25,10 @@ body{
 .header .logo{
     font-size: 30px;
     font-weight: bold;
-    color: rgb(167, 166, 166);
 }
 .cart{
     display: flex;
-    background-color: rgb(167, 166, 166);
+    background-color: rgb(200, 200, 200);
     justify-content: space-between;
     align-items: center;
     padding: 7px 10px;
@@ -37,7 +36,7 @@ body{
     width: 80px;
 }
 .fa-solid{
-    color: #f7f4e4;
+    color: #5c5c5c;
 }
 .cart p{
     height: 22px;
@@ -46,7 +45,7 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 22px;
-    background-color: goldenrod;
+    background-color: #000000;
     color: white;
 }
 .container{
@@ -63,18 +62,18 @@ body{
 .sidebar{
     width: 40%;
     border-radius: 5px;
-    background-color: #eee;
+    background-color: #ececec;
     margin-left: 20px;
     padding: 15px;
     text-align: center;
 }
 .head{
-    background-color: #f7f4e4;
+    background-color: rgb(200, 200, 200);
     border-radius: 3px;
     height: 40px;
     padding: 10px;
     margin-bottom: 20px;
-    color: rgb(167, 166, 166);
+    color: #444444;
     display: flex;
     align-items: center;
 }
@@ -90,7 +89,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid goldenrod;
+    border: 1px solid #d5d5d5;
     border-radius: 5px;
     padding: 15px;
 }
@@ -119,20 +118,20 @@ body{
 }
 h2{
     font-size: 20px;
-    color: rgb(17, 185, 31);
+    color: rgb(28, 189, 42);
 }
 button{
     width: 100%;
     position: relative;
     border: none;
     border-radius: 5px;
-    background-color: #f7f4e4;
+    background-color: rgb(200, 200, 200);
     padding: 7px 25px;
     cursor: pointer;
-    color: rgb(167, 166, 166);
+    color: #444444;
 }
 button:hover{
-    background-color: #4e4e4e;
+    background-color: #bbbbbb;
 }
 .cart-item{
     display: flex;
@@ -162,3 +161,10 @@ button:hover{
     cursor: pointer;
     color: #333;
 }
+
+/*.button {
+    padding: 8px 16px;
+    margin-top: 16px;
+    text-decoration: none;
+    color: #000000;
+}*/
